--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,22 +14,47 @@
 		  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 		}
 
+		.details {
+		  width: 150px;
+		  height: 120px;
+		  overflow: scroll;
+		}
+
+		.horizontal {
+		    width: 100%;
+		    height: 400px;
+		    overflow: auto;
+		}
 	</style>
 
 	<h2>{{message}}</h2>
 	<h1>Books!!!!</h1>
 	<br>
-	{% if recommendationData|length > 0 %}
-		{% for eachGenre in recommendationData %}
-			{% for eachBook in eachGenre %}
-				<div class="card">
-					<img src="{{eachBook.image_url}}" alt="Avatar" height="150" width="100" style="text-align: center"><br>
-					<h5>Book Title:</h5>{{eachBook.original_title}}<br>
-					<h5>Authors:</h5>{{eachBook.authors}}
-				</div><br><br>
+	{% if not session.logged_in %}
+	{% else %}
+		{% if recommendationData|length > 0 %}
+			{% for eachCategory in recommendationData %}
+				<h4>{{eachCategory.category}}</h4>
+				<div class="horizontal">
+					<table>
+						<tr>
+							{% for eachBook in eachCategory.list %}
+							<th style="text-align: left; padding: 8px;">
+								<a href="/book/{{eachBook.original_title}}">
+									<div class="card">
+										<img src="{{eachBook.image_url}}" alt="Avatar" height="200" width="150" style="text-align: center"><br>
+										<div class="details">
+											<p><h5>Book Title:</h5>{{eachBook.original_title}}</p>
+											<p><h5>Authors:</h5>{{eachBook.authors}}</p>
+										</div>
+									</div>
+								</a>
+							</th>
+							{% endfor %}
+						</tr>
+					</table>
+				</div>
 			{% endfor %}
-			<br>
-			<br>
-		{% endfor %}
+		{% endif %}
 	{% endif %}
 {% endblock %}
