--- a/templates/book.html
+++ b/templates/book.html
@@ -34,7 +34,7 @@
 </style>
 
 
-{% if bookDetails.list|length > 0 %}
+{% if bookDetails.list|length == 0 %}
 
 	<div class="row">
 	  <div class="col-sm-3">
@@ -96,11 +96,7 @@
 
 	  </div>
 	</div>
-{% else %}
-<h2>
-	Sorry, Book not found, alternatively you can read more about it 
-	<a href="https://www.google.com/search?tbm=bks&q={{ bookDetails.title }}"> here</a>...
-</h2>
+
 {% endif %}
 
 
@@ -127,6 +123,11 @@
 			</table>
 		</div>
 	{% endfor %}
+{% else %}
+<h2>
+	Sorry, Book not found, alternatively you can read more about it 
+	<a href="https://www.google.com/search?tbm=bks&q={{ bookDetails.title }}"> here</a>...
+</h2>
 {% endif %}
 
 
