--- a/templates/book.html
+++ b/templates/book.html
@@ -54,7 +54,7 @@
 			<script>
 			$(document).ready(function(){
 			  $("button").click(function(){
-			    $.get("http://localhost:5000/addToMyList/bookName/{{bookDetails.original_title}}/isbn/{{bookDetails.isbn}}", function(data, status){
+			    $.get("/addToMyList/bookName/{{bookDetails.original_title}}/isbn/{{bookDetails.isbn}}", function(data, status){
 			      alert("Data: " + data + "\nStatus: " + status);
 			      if(data === "Added successfully!!"){
 			      	document.getElementById("myListButton").value="Remove from My List";
